--- a/react-app/package.json
+++ b/react-app/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copyfiles": "^2.4.1",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
