--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
   /: https://drive.google.com/drive/folders/1uG21gIhZZoIobPDlg3RNbteHmvkuGdu2
+
+folders:
+  /products/: /products/default
