--- a/react-app/package.json
+++ b/react-app/package.json
@@ -32,6 +32,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
